# swelling-channel

./: .gitignore  Makefile.am  inflate_rectangular_plate_koiter_steigmann.cc  perturb_rectangular_plate_koiter_steigmann.cc  prestrain_rectangular_plate_koiter_steigmann.cc  rectangular_plate_koiter_steigmann.cc  symmetric_rectangular_plate_koiter_steigmann.cc  template.bash
